# LAU_task

./: .gitignore  README.md
python_implementation/: Dockerfile  docker-compose.yml  main.py  pyproject.toml  test.db
python_implementation/migrations/: env.py
python_implementation/migrations/versions/: 20260202_2259_001_create_tasks_table.py  20260202_2341_002_add_status_remove_iscomplete.py
python_implementation/src/: container.py
python_implementation/src/application/dtos/: task_dtos.py
python_implementation/src/application/use_cases/tasks/: complete_task_use_case.py  create_task_use_case.py  delete_task_use_case.py  get_task_by_id_use_case.py  list_tasks_use_case.py
python_implementation/src/config/: config.py  constants.py
python_implementation/src/domain/abstractions/cache/: abstract_redis_cache.py
python_implementation/src/domain/abstractions/repositories/: abstract_task_repository.py
python_implementation/src/domain/entities/: task_entity.py
python_implementation/src/domain/enums/: task_enums.py
python_implementation/src/infrastructure/cache/: redis_cache.py
python_implementation/src/infrastructure/database/: config.py  session.py
python_implementation/src/infrastructure/database/models/: task.py
python_implementation/src/infrastructure/database/repositories/: tasks_repository.py
python_implementation/src/presentation/routers/: task_router.py
python_implementation/tests/: conftest.py  run_tests.py  test_complete_task.py  test_create_task.py  test_delete_task.py  test_get_task_by_id.py  test_list_tasks.py
(+26 files in other folders)
